--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <title>Onobot Development Panel</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/main.css">
+    <link rel="stylesheet" href="assets/main.scss">
   </head>
   <body>
     <div id="app"></div>
